--- a/Echo/Echo.fsproj
+++ b/Echo/Echo.fsproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Types\Types.fsproj" />
+      <ProjectReference Include="..\Utilities\Utilities.fsproj" />
     </ItemGroup>
 
 </Project>
