--- a/.github/workflows/test-solutions.yaml
+++ b/.github/workflows/test-solutions.yaml
@@ -22,3 +22,11 @@ jobs:
                     dot -V
                     gnuplot --version
 
+            -   name: Download and isntall maelstrom program
+                run: |
+                    wget -c "https://github.com/jepsen-io/maelstrom/releases/download/v0.2.3/maelstrom.tar.bz2"
+                    tar -xvf maelstrom.tar.bz2
+
+            -   name: Check maelstrom installation
+                run: ls -lah
+
