CI: Add challenge testing upto 3c

--- a/.github/workflows/test-solutions.yaml
+++ b/.github/workflows/test-solutions.yaml
@@ -30,9 +30,26 @@ jobs:
             -   name: Check maelstrom installation
                 run: ls -lah
 
-            -   name: Test Echo challenge
+            -   name: Build projeccts
                 run: |
-                    pushd ./Echo
-                    dotnet publish -c Release
-                    ./../maelstrom/maelstrom test -w echo --bin ./bin/Release/net7.0/publish/Echo --node-count 10 --time-limit 1
+                    dotnet publish ./Echo/Echo.fsproj --no-self-contained -o ./bin/Echo/
+                    dotnet publish ./UniqueIdGen/UniqueIdGen.fsproj --no-self-contained -o ./bin/UniqueIdGen/
+                    dotnet publish ./Broadcast/Broadcast.fsproj --no-self-contained -o ./bin/Broadcast/
+
+            -   name: Test Echo challenge
+                run: ./maelstrom/maelstrom test -w echo --bin ./bin/Echo/Echo --node-count 10 --time-limit 1
+
+            -   name: Test Unique Id Generation challenge
+                run: ./maelstrom/maelstrom test -w unique-ids --bin ./bin/UniqueIdGen/UniqueIdGen --time-limit 30 --rate 1000 --node-count 3 --availability total --nemesis partition --log-stderr true
+
+            -   name: Test Single Node Broadcast challenge
+                run: ./maelstrom/maelstrom test -w broadcast --bin ./bin/Broadcast/Broadcast --node-count 1 --time-limit 20 --rate 10 --log-stderr true
+
+            -   name: Test Multi Node Broadcast challenge
+                run: ./maelstrom/maelstrom test -w broadcast --bin ./bin/Broadcast/Broadcast --node-count 5 --time-limit 20 --rate 10 --log-stderr true
+
+            -   name: Test Fault Tolerant Broadcast challenge
+                run: ./maelstrom/maelstrom test -w broadcast --bin ./bin/Broadcast/Broadcast --node-count 5 --time-limit 20 --rate 10 --nemesis partition --log-stderr true
+
+
 
