--- a/.github/workflows/test-solutions.yaml
+++ b/.github/workflows/test-solutions.yaml
@@ -57,7 +57,7 @@ jobs:
 
             -   name: Test Efficient BroadCast, Part 1
                 run: |
-                    ./maelstrom/maelstrom test -w broadcast --bin ./bin/Release/net7.0/publish/Broadcast --node-count 25 --time-limit 20 --rate 100 --latency 100
+                    ./maelstrom/maelstrom test -w broadcast --bin ./bin/Broadcast/Broadcast --node-count 25 --time-limit 20 --rate 100 --latency 100
                     python ./.github/scripts/checker_3d.py
 
 
