--- a/.github/workflows/test-solutions.yaml
+++ b/.github/workflows/test-solutions.yaml
@@ -58,7 +58,7 @@ jobs:
             -   name: Test Efficient BroadCast, Part 1
                 run: |
                     ./maelstrom/maelstrom test -w broadcast --bin ./bin/Broadcast/Broadcast --node-count 25 --time-limit 20 --rate 100 --latency 100 --nemesis partition 90
-                    ./maelstrom/maelstrom test -w broadcast --bin ./bin/Broadcast/Broadcast --node-count 25 --time-limit 20 --rate 100 --latency 100 50
+                    ./maelstrom/maelstrom test -w broadcast --bin ./bin/Broadcast/Broadcast --node-count 25 --time-limit 20 --rate 100 --latency 100 50 >> /dev/null
                     python ./.github/scripts/checker_task_3.py --msgs-per-op 30 --median-latency 400 --max-latency 600
             -   name: Test Efficient BroadCast, Part 2
                 run: |
