--- a/Utilities/Utilities.fsproj
+++ b/Utilities/Utilities.fsproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <Compile Include="Initializer.fs" />
+        <Compile Include="Timer.fs" />
     </ItemGroup>
 
     <ItemGroup>
