--- a/Utilities/Utilities.fsproj
+++ b/Utilities/Utilities.fsproj
@@ -7,7 +7,8 @@
 
     <ItemGroup>
         <Compile Include="Initializer.fs" />
-        <Compile Include="Timer.fs" />
+        <Compile Include="TimerProcessor.fs" />
+        <Compile Include="InputProcessor.fs" />
     </ItemGroup>
 
     <ItemGroup>
