--- a/.github/workflows/test-solutions.yaml
+++ b/.github/workflows/test-solutions.yaml
@@ -40,6 +40,7 @@ jobs:
                     dotnet publish ./UniqueIdGen/UniqueIdGen.fsproj --no-self-contained -o ./bin/UniqueIdGen/
                     dotnet publish ./Broadcast/Broadcast.fsproj --no-self-contained -o ./bin/Broadcast/
                     dotnet publish ./GrowOnlyCounter/GrowOnlyCounter.fsproj --no-self-contained -o ./bin/GrowOnlyCounter/
+                    dotnet publish ./Kafka/Kafka.fsproj --no-self-contained -o ./bin/Kafka/
 
             -   name: Test Echo challenge
                 run: ./maelstrom/maelstrom test -w echo --bin ./bin/Echo/Echo --node-count 10 --time-limit 1 >> /dev/null
@@ -69,6 +70,9 @@ jobs:
 
             -   name: Test Grow Only Counter
                 run: ./maelstrom/maelstrom test -w g-counter --bin ./bin/GrowOnlyCounter/GrowOnlyCounter --node-count 3 --rate 100 --time-limit 20 --nemesis partition
+
+            -   name: Test Single node Kafka style log
+                run: ./maelstrom/maelstrom test -w kafka --bin ./bin/Kafka/Kafka --node-count 1 --concurrency 2n --time-limit 20 --rate 1000
 
             -   uses: actions/upload-artifact@v4
                 if: always()
