--- a/.github/workflows/test-solutions.yaml
+++ b/.github/workflows/test-solutions.yaml
@@ -74,8 +74,8 @@ jobs:
             -   name: Test Single node Kafka style log
                 run: ./maelstrom/maelstrom test -w kafka --bin ./bin/Kafka/Kafka --node-count 1 --concurrency 2n --time-limit 20 --rate 1000 >> /dev/null
 
-            -   uses: actions/upload-artifact@v4
-                if: always()
-                with:
-                    name: Collect store folder
-                    path: store/
+            # -   uses: actions/upload-artifact@v4
+            #     if: always()
+            #     with:
+            #         name: Collect store folder
+            #         path: store/
