Extract key value store rpc messages to types

--- a/Types/Types.fsproj
+++ b/Types/Types.fsproj
@@ -9,6 +9,7 @@
         <Compile Include="CodecExtension.fs" />
         <Compile Include="Node.fs" />
         <Compile Include="Message.fs" />
+        <Compile Include="KeyValueStore.fs" />
     </ItemGroup>
 
     <ItemGroup>
