--- a/TotallyAvailableTransactions/TotallyAvailableTransactions.fsproj
+++ b/TotallyAvailableTransactions/TotallyAvailableTransactions.fsproj
@@ -6,7 +6,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="Types.fs" />
+        <Compile Include="Transition.fs" />
         <Compile Include="Program.fs"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Types\Types.fsproj" />
+      <ProjectReference Include="..\Utilities\Utilities.fsproj" />
     </ItemGroup>
 
 </Project>
