--- a/.github/workflows/test-solutions.yaml
+++ b/.github/workflows/test-solutions.yaml
@@ -41,6 +41,7 @@ jobs:
                     dotnet publish ./Broadcast/Broadcast.fsproj --no-self-contained -o ./bin/
                     dotnet publish ./GrowOnlyCounterFtBroadcast/GrowOnlyCounterFtBroadcast.fsproj --no-self-contained -o ./bin/
                     dotnet publish ./GrowOnlyCounterFtSeqKV/GrowOnlyCounterFtSeqKV.fsproj --no-self-contained -o ./bin/
+                    dotnet publish ./GrowOnlyCounterFtCRDT/GrowOnlyCounterFtCRDT.fsproj --no-self-contained -o ./bin/
                     dotnet publish ./Kafka/Kafka.fsproj --no-self-contained -o ./bin/
                     dotnet publish ./TotallyAvailableTransactions/TotallyAvailableTransactions.fsproj --no-self-contained -o ./bin/
 
@@ -75,6 +76,9 @@ jobs:
 
             -   name: Test Grow Only Counter Ft SeqKV
                 run: ./maelstrom/maelstrom test -w g-counter --bin ./bin/GrowOnlyCounterFtSeqKV --node-count 3 --rate 100 --time-limit 20 --nemesis partition
+
+            -   name: Test Grow Only Counter Ft CRDT
+                run: ./maelstrom/maelstrom test -w g-counter --bin ./bin/GrowOnlyCounterFtCRDT --node-count 3 --rate 100 --time-limit 20 --nemesis partition
 
             -   name: Test Single node Kafka style log
                 run: ./maelstrom/maelstrom test -w kafka --bin ./bin/Kafka --node-count 1 --concurrency 2n --time-limit 20 --rate 1000
